--- a/src/layouts/header/header.module.scss
+++ b/src/layouts/header/header.module.scss
@@ -35,13 +35,17 @@
 .coverHeader {
   padding: 0 15px;
   margin: 0 auto;
+
   @media (min-width: 1200px) {
     width: 1170px;
   }
-  @media (min-width: 992px) {
+  @media (min-width: 992px) and (max-width: 1199.97px) {
     width: 970px;
   }
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 750px;
   }
   @media only screen and (min-width: 320px) and (max-width: 767px) {
@@ -84,20 +88,30 @@
     border-radius: 0;
     margin-top: 35px;
   }
+
+  &.borderBlack {
+    border: 1px solid $black;
+  }
+
+  &.openMenu {
+    background-color: $link;
+  }
 }
 
 .linkLogoHeader {
   line-height: 100px;
   height: 100px;
-  @media only screen and (min-width: 768px) and (max-width: 991px) {
+  transition: all 0.3s ease;
+  @media (max-width: 767px) {
     float: left;
     text-align: center;
   }
+}
 
-  .logoHeader {
-    vertical-align: middle;
-    border: 0;
-  }
+.logoHeader {
+  vertical-align: middle;
+  border: 0;
+  display: inline-block;
 }
 
 .itemRight {
@@ -105,7 +119,7 @@
   padding: 0;
   float: right !important;
 
-  @media (min-width: 768) {
+  @media (min-width: 768px) {
     margin: 0;
     display: block !important;
     height: auto !important;
@@ -116,12 +130,12 @@
     box-shadow: none;
   }
 
-  @media only screen and (max-width: 767) {
+  @media only screen and (max-width: 767px) {
     width: 100%;
     background-color: $bg_light_black;
     margin-right: 0;
     margin-left: 0;
-    display: none;
+    display: none !important;
   }
 }
 
@@ -156,5 +170,42 @@
 
   @media only screen and (min-width: 992px) {
     position: static !important;
+  }
+}
+
+.itemLink {
+  color: $black;
+  font-size: px-to-rem(14px);
+  text-transform: uppercase;
+  font-weight: 700;
+  line-height: 100px;
+  padding: 0;
+  position: relative;
+  display: block;
+  transition: all 0.3s ease;
+  text-decoration: none;
+  margin-right: 32px;
+
+  &.colorBlackLink {
+    color: $black;
+  }
+
+  &:hover {
+    background-color: transparent;
+    color: #bb9356;
+  }
+}
+
+.iconBar {
+  background-color: $white;
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+  cursor: pointer;
+  margin: 4px 0;
+
+  &.iconBarBlack {
+    background-color: $black;
   }
 }
