--- a/src/layouts/header/header.module.scss
+++ b/src/layouts/header/header.module.scss
@@ -77,7 +77,6 @@
   float: right;
   padding: 9px 10px;
   margin-top: 8px;
-  margin-right: 15px;
   margin-bottom: 8px;
   background-color: transparent;
   background-image: none;
@@ -85,7 +84,7 @@
   border-radius: 4px;
   @media only screen and (min-width: 320px) and (max-width: 767px) {
     border-color: #ffffff;
-    border-radius: 0;
+    border-radius: 10px;
     margin-top: 35px;
   }
 
@@ -94,7 +93,7 @@
   }
 
   &.openMenu {
-    background-color: $link;
+    background-color: $light-yellow;
   }
 }
 
@@ -132,7 +131,7 @@
 
   @media only screen and (max-width: 767px) {
     width: 100%;
-    background-color: $bg_light_black;
+    background-color: $light-black;
     margin-right: 0;
     margin-left: 0;
     display: none !important;
@@ -194,6 +193,10 @@
     background-color: transparent;
     color: #bb9356;
   }
+
+  &.selected {
+    color: $light-yellow;
+  }
 }
 
 .iconBar {
@@ -201,7 +204,7 @@
   display: block;
   width: 22px;
   height: 2px;
-  border-radius: 1px;
+  border-radius: 10px;
   cursor: pointer;
   margin: 4px 0;
 
