--- a/src/components/home/section1/section1.module.scss
+++ b/src/components/home/section1/section1.module.scss
@@ -24,23 +24,17 @@
   perspective: 2500px;
   backface-visibility: hidden;
   transform-style: preserve-3d;
+  overflow: visible !important;
 }
 
 .wrapSlider {
-  list-style: none !important;
-  position: absolute;
-  margin: 0 !important;
-  padding: 0 !important;
-  background-image: none;
-  background-position: 0 0;
-  text-indent: 0;
-  top: 0;
-  left: 0;
   visibility: visible;
+  display: block;
   overflow: hidden;
-  width: 1207px;
+  width: 1863px;
   height: 100%;
   max-height: none;
+  left: 0px;
 }
 
 .itemSlider {
@@ -49,17 +43,17 @@
   height: 100%;
   overflow: hidden;
   z-index: 18;
-  visibility: hidden;
-  opacity: 0;
   background-color: rgba(255, 255, 255, 0);
+  list-style: none !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  overflow-x: visible;
+  overflow-y: visible;
   background-image: none;
   background-position: 0 0;
   text-indent: 0;
-  top: 0;
-  left: 0;
-  margin: 0 !important;
-  padding: 0 !important;
-  list-style: none !important;
+  top: 0px;
+  left: 0px;
 }
 
 .wrapItem {
@@ -72,4 +66,75 @@
   visibility: inherit;
   opacity: 1;
   transform: matrix(1, 0, 0, 1, 0, 0);
+
+  .imgSlide {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    visibility: inherit;
+  }
+}
+
+.leftArrowSlide {
+  position: absolute;
+  z-index: 1000;
+  top: 50%;
+  transform: matrix(1, 0, 0, 1, -17, -54);
+  left: 0px;
+  width: 28px;
+  height: 108px;
+  background-color: transparent;
+  cursor: pointer;
+
+  .arrowLeftSlide {
+    width: 28px;
+    height: 108px;
+    position: relative;
+    left: 11px;
+    text-align: center;
+    object-fit: cover;
+  }
+}
+
+.RightArrowSlide {
+  position: absolute;
+  z-index: 1000;
+  top: 50%;
+  transform: matrix(1, 0, 0, 1, -17, -54);
+  left: 100%;
+  width: 28px;
+  height: 109px;
+  background-color: transparent;
+  cursor: pointer;
+
+  .arrowRightSlide {
+    width: 28px;
+    height: 108px;
+    position: relative;
+    right: 4px;
+    text-align: center;
+    object-fit: cover;
+  }
+}
+
+.listDotSlide {
+  position: absolute;
+  width: 44px;
+  height: 10px;
+  top: 50%;
+  transform: matrix(1, 0, 0, 1, -22, 305);
+  left: 50%;
+  z-index: 1000;
+}
+
+.wrapDotItem {
+  cursor: pointer;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0);
+  transition: box-shadow 0.3s ease;
+  background: transparent;
 }
