--- a/src/layouts/header/header.module.scss
+++ b/src/layouts/header/header.module.scss
@@ -80,7 +80,7 @@
   margin-bottom: 8px;
   background-color: transparent;
   background-image: none;
-  border: 1px solid transparent;
+  border: 3px solid transparent;
   border-radius: 4px;
   @media only screen and (min-width: 320px) and (max-width: 767px) {
     border-color: #ffffff;
@@ -89,7 +89,7 @@
   }
 
   &.borderBlack {
-    border: 1px solid $black;
+    border: 3px solid $white;
   }
 
   &.openMenu {
@@ -173,7 +173,7 @@
 }
 
 .itemLink {
-  color: $black;
+  color: $white;
   font-size: px-to-rem(14px);
   text-transform: uppercase;
   font-weight: 700;
@@ -203,12 +203,12 @@
   background-color: $white;
   display: block;
   width: 22px;
-  height: 2px;
+  height: 3px;
   border-radius: 10px;
   cursor: pointer;
-  margin: 4px 0;
+  margin: 5px 0;
 
   &.iconBarBlack {
-    background-color: $black;
+    background-color: $white;
   }
 }
