--- a/src/layouts/header/header.module.scss
+++ b/src/layouts/header/header.module.scss
@@ -83,9 +83,9 @@
   border: 3px solid transparent;
   border-radius: 4px;
   @media only screen and (min-width: 320px) and (max-width: 767px) {
-    border-color: #ffffff;
+    border-color: $black;
     border-radius: 10px;
-    margin-top: 35px;
+    margin-top: 25px;
   }
 
   &.borderBlack {
@@ -209,6 +209,6 @@
   margin: 5px 0;
 
   &.iconBarBlack {
-    background-color: $white;
+    background-color: $black;
   }
 }
