--- a/src/components/home/section1/section1.module.scss
+++ b/src/components/home/section1/section1.module.scss
@@ -150,7 +150,7 @@
   height: 10px;
   top: 50%;
   transform: matrix(1, 0, 0, 1, -22, 305);
-  left: 48%;
+  left: 50%;
   z-index: 1000;
   display: flex;
 
@@ -182,5 +182,51 @@
 
   &.selectedSlide {
     background-color: $white;
+  }
+}
+
+.wrapTextContent {
+  position: absolute;
+  visibility: visible;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  display: flex;
+}
+
+.wrapItemFirst {
+  position: absolute;
+  overflow: hidden;
+  transform: matrix(1, 0, 0, 1, 0, 0);
+}
+
+.coverItemFirst {
+  visibility: inherit;
+  transition: none 0s ease 0s;
+  text-align: inherit;
+  line-height: 19px;
+  border-width: 0px;
+  margin: 0px;
+  padding: 0px;
+  letter-spacing: 0px;
+  font-weight: 400;
+  font-size: 13px;
+  white-space: nowrap;
+  min-height: 0px;
+  min-width: 0px;
+  max-height: none;
+  max-width: none;
+  opacity: 1;
+  transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+  transform-origin: 50% 50% 0px;
+
+  .itemFirst {
+    color: #bb9356;
+    font-family: "Ruthie", cursive;
+    font-size: 45px;
+    font-weight: 400;
+    line-height: 45px;
+    margin-bottom: 0;
+    text-transform: capitalize;
   }
 }
