--- a/src/components/home/section1/section1.module.scss
+++ b/src/components/home/section1/section1.module.scss
@@ -145,27 +145,19 @@
   }
 }
 
-.listDotSlide {
+.wrapListDotSlide {
   position: absolute;
+  bottom: 5%;
   height: 10px;
-  top: 50%;
-  transform: matrix(1, 0, 0, 1, -22, 305);
-  left: 50%;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.listDotSlide {
+  height: 10px;
   z-index: 1000;
   display: flex;
-
-  @media (max-width: 767px) {
-    top: 15%;
-    left: 46%;
-  }
-
-  @media (min-width: 768px) and (max-width: 1024px) {
-    top: 36%;
-  }
-
-  @media (min-width: 768px) and (max-width: 1200px) {
-    left: 47%;
-  }
 }
 
 .wrapDotItem {
@@ -188,13 +180,14 @@
 .wrapTextContent {
   position: absolute;
   visibility: visible;
-  left: 50%;
-  top: 50%;
+  top: 30%;
   z-index: 1;
   display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
-.wrapItemFirst {
+.wrapItemTextContent {
   position: absolute;
   overflow: hidden;
   transform: matrix(1, 0, 0, 1, 0, 0);
@@ -219,6 +212,7 @@
   opacity: 1;
   transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
   transform-origin: 50% 50% 0px;
+  text-align: center;
 
   .itemFirst {
     color: #bb9356;
@@ -227,6 +221,39 @@
     font-weight: 400;
     line-height: 45px;
     margin-bottom: 0;
+    text-transform: capitalize;
+  }
+}
+
+.coverItemSecond {
+  visibility: inherit;
+  transition: none 0s ease 0s;
+  text-align: inherit;
+  line-height: 19px;
+  border-width: 0px;
+  margin: 0px;
+  padding: 0px;
+  letter-spacing: 0px;
+  font-weight: 400;
+  font-size: 13px;
+  white-space: nowrap;
+  min-height: 0px;
+  min-width: 0px;
+  max-height: none;
+  max-width: none;
+  opacity: 1;
+  transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+  transform-origin: 50% 50% 0px;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+
+  .itemSecond {
+    line-height: 1.3;
+    color: $white;
+    font-family: 'Abril Fatface', cursive;
+    font-size: 85px;
+    font-weight: 400;
     text-transform: capitalize;
   }
 }
