update content slide show

--- a/src/components/home/section2/section2.module.scss
+++ b/src/components/home/section2/section2.module.scss
@@ -3,7 +3,7 @@
 .Container {
   margin: 210px 0;
   text-align: center;
-  color: #bb9356;
+  color: $light-yellow;
   font-family: "Ruthie", cursive;
   font-size: 64px;
   font-weight: 400;
