--- a/src/components/home/section1/section1.module.scss
+++ b/src/components/home/section1/section1.module.scss
@@ -121,6 +121,10 @@
     left: 10px;
     text-align: center;
     object-fit: cover;
+
+    @media (max-width: 767.98px) {
+      left: 11px;
+    }
   }
 }
 
@@ -139,9 +143,13 @@
     width: 28px;
     height: 108px;
     position: relative;
-    right: 3px;
+    right: 4px;
     text-align: center;
     object-fit: cover;
+
+    @media (max-width: 767.98px) {
+      right: 5px;
+    }
   }
 }
 
@@ -215,13 +223,21 @@
   text-align: center;
 
   .itemFirst {
-    color: #bb9356;
+    color: $light-yellow;
     font-family: "Ruthie", cursive;
     font-size: 45px;
     font-weight: 400;
     line-height: 45px;
     margin-bottom: 0;
     text-transform: capitalize;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      font-size: 36px;
+    }
+
+    @media (max-width: 767.98px) {
+      font-size: 32px;
+    }
   }
 }
 
@@ -251,9 +267,169 @@
   .itemSecond {
     line-height: 1.3;
     color: $white;
-    font-family: 'Abril Fatface', cursive;
+    font-family: "Abril Fatface", cursive;
     font-size: 85px;
     font-weight: 400;
     text-transform: capitalize;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      font-size: 48px;
+    }
+
+    @media (max-width: 767.98px) {
+      font-size: 24px;
+    }
+  }
+}
+
+.coverItemThird {
+  visibility: inherit;
+  transition: none 0s ease 0s;
+  text-align: inherit;
+  line-height: 19px;
+  border-width: 0px;
+  margin: 10px 0 0 0;
+  padding: 0px;
+  letter-spacing: 0px;
+  font-weight: 400;
+  font-size: 13px;
+  white-space: nowrap;
+  min-height: 0px;
+  min-width: 0px;
+  max-height: none;
+  max-width: none;
+  opacity: 1;
+  transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+  transform-origin: 50% 50% 0px;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+
+  .itemThird {
+    color: $light-white;
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 26px;
+    margin-bottom: 0;
+
+    @media (max-width: 767.98px) {
+      font-size: 12px;
+      line-height: 18px;
+    }
+  }
+}
+
+.coverItemFourth {
+  visibility: inherit;
+  transition: none 0s ease 0s;
+  text-align: inherit;
+  line-height: 19px;
+  border-width: 0px;
+  margin: 20px 0 0 0;
+  padding: 0px;
+  letter-spacing: 0px;
+  font-weight: 400;
+  font-size: 13px;
+  white-space: nowrap;
+  min-height: 0px;
+  min-width: 0px;
+  max-height: none;
+  max-width: none;
+  opacity: 1;
+  transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+  transform-origin: 50% 50% 0px;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+
+  .listActions {
+    display: flex;
+    justify-content: center;
+
+    a {
+      border-radius: 50px;
+      border: 2px solid transparent;
+      font-family: "Poppins", sans-serif;
+      position: relative;
+      z-index: 2;
+      font-size: 14px;
+      font-weight: 700;
+      text-transform: uppercase;
+      text-align: center;
+      padding: 0;
+      line-height: 49px;
+      width: 170px;
+      height: 51px;
+      letter-spacing: 0.28px;
+
+      @media (max-width: 767.98px) {
+        width: 120px;
+        height: 30px;
+        font-size: 10px;
+        font-weight: 700;
+        line-height: 28px;
+      }
+
+      &.item1 {
+        background-color: $light-yellow;
+        color: $white;
+        margin-right: 30px;
+        &:hover {
+          background-color: $white;
+          color: $light-yellow;
+        }
+      }
+
+      &.item2 {
+        color: $white;
+        border: 2px solid $white;
+        &:hover {
+          background-color: $white;
+          color: $light-yellow;
+        }
+      }
+
+      &.actionSlide2 {
+        width: 270px;
+        height: 51px;
+        color: $white;
+        border: 2px solid $white;
+
+        @media (max-width: 767.98px) {
+          width: 200px;
+          height: 30px;
+          font-size: 10px;
+          font-weight: 700;
+          line-height: 28px;
+        }
+
+        &:hover {
+          background-color: $white;
+          color: $light-yellow;
+        }
+      }
+
+      &.actionSlide3 {
+        width: 170px;
+        height: 51px;
+        color: $black;
+        background-color: $white;
+        border: 2px solid $white;
+
+        @media (max-width: 767.98px) {
+          width: 120px;
+          height: 30px;
+          font-size: 10px;
+          font-weight: 700;
+          line-height: 28px;
+        }
+
+        &:hover {
+          background-color: $light-yellow;
+          color: $white;
+        }
+      }
+    }
   }
 }
