--- a/src/layouts/header/header.module.scss
+++ b/src/layouts/header/header.module.scss
@@ -14,8 +14,13 @@
   top: 20px;
   border: none;
   border-radius: 0;
-  min-height: 100px;
+  height: 100px;
   margin: 0 20px;
+
+  @media (max-width: 767.98px) {
+    margin: 0;
+    padding: 0 10px;
+  }
 
   &.scrolled {
     position: fixed;
@@ -23,12 +28,17 @@
     background-color: $white;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.09);
     border-radius: 0;
-    min-height: 100px;
+    height: 100px;
     border: none;
     margin: 0 20px;
     right: 0;
     left: 0;
     z-index: 1030;
+
+    @media (max-width: 767.98px) {
+      margin: 0;
+      padding: 0 10px;
+    }
   }
 }
 
@@ -36,11 +46,18 @@
   padding: 0 15px;
   margin: 0 auto;
 
-  @media (min-width: 1200px) {
-    width: 1170px;
+  @media (min-width: 1250px) {
+    width: auto;
   }
-  @media (min-width: 992px) and (max-width: 1199.97px) {
-    width: 970px;
+
+  @media (min-width: 1200px) {
+    width: 1050px;
+  }
+  @media (min-width: 992px) and (max-width: 1023.98px) {
+    width: 870px;
+  }
+  @media (min-width: 1024px) and (max-width: 1199.98px) {
+    width: 900px;
   }
   @media (min-width: 768px) and (max-width: 991.98px) {
     display: flex;
@@ -48,7 +65,10 @@
     align-items: center;
     width: 750px;
   }
-  @media only screen and (min-width: 320px) and (max-width: 767px) {
+  @media (min-width: 768px) and (max-width: 850px) {
+    padding: 0 35px;
+  }
+  @media (min-width: 320px) and (max-width: 767px) {
     margin: 0;
     padding: 0;
   }
@@ -86,6 +106,7 @@
     border-color: $black;
     border-radius: 10px;
     margin-top: 25px;
+    padding: 5px 10px;
   }
 
   &.borderBlack {
@@ -184,14 +205,19 @@
   transition: all 0.3s ease;
   text-decoration: none;
   margin-right: 32px;
+  font-family: "Poppins", sans-serif;
 
   &.colorBlackLink {
     color: $black;
   }
 
+  &.itemBlog {
+    margin-right: 0;
+  }
+
   &:hover {
     background-color: transparent;
-    color: #bb9356;
+    color: $light-yellow;
   }
 
   &.selected {
