--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -85,12 +85,20 @@
   margin: 0;
 }
 
-// html,
+html {
+  padding: 0 !important;
+}
+
+html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
   padding: 20px;
   background-color: $white;
+
+  @media (max-width: 767.98px) {
+    padding: 6px;
+  }
 }
 
 /* body {
