--- a/src/components/home/section2/section2.module.scss
+++ b/src/components/home/section2/section2.module.scss
@@ -3,10 +3,25 @@
 .Container {
   margin: 110px 0;
   overflow: hidden;
+
+  @media (max-width: 767.98px) {
+    margin: 60px 0;
+  }
 }
 
 .wrapTopContent {
   text-align: center;
+  width: 66.6666667%;
+  margin: 0 auto;
+  padding: 0 15px;
+
+  @media (min-width: 768px) and (max-width: 1023.98px) {
+    width: 90%;
+  }
+
+  @media (max-width: 767.98px) {
+    width: 100%;
+  }
 }
 
 .titleHello {
@@ -17,4 +32,118 @@
   line-height: 1;
   margin-bottom: 5px;
   text-transform: capitalize;
+
+  @media (max-width: 767.98px) {
+    font-size: 35px;
+  }
+}
+
+.titleDetail {
+  font-family: "Abril Fatface", cursive;
+  color: $light-black;
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 1;
+
+  @media (max-width: 767.98px) {
+    font-size: 40px;
+  }
+}
+
+.wrapSticker {
+  margin: 25px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .iconShape {
+    height: 16px;
+  }
+}
+
+.textContentSection {
+  font-family: "Poppins", sans-serif;
+  color: $grey;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-bottom: 0;
+  padding: 0 40px;
+
+  @media (max-width: 767.98px) {
+    padding: 0 20px;
+  }
+}
+
+.wrapImgAuthor {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapBodyContent {
+  margin: 0 -15px;
+}
+
+.coverBodyContent {
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  @media (min-width: 992px) {
+    width: 100%;
+    float: left;
+  }
+}
+
+.bgSection2 {
+  overflow: hidden;
+  position: absolute;
+  top: 110px;
+  left: 0;
+  height: 950px;
+  width: 100%;
+  z-index: 0;
+  object-fit: cover;
+}
+
+.wrapMenuSection2 {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  @media (min-width: 1200px) {
+    width: 1170px;
+  }
+
+  @media (min-width: 992px) {
+    width: 970px;
+  }
+
+  @media (min-width: 768px) {
+    width: 750px;
+  }
+}
+
+.coverMenu {
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.setSize {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+
+  @media (min-width: 992px) {
+    width: 100%;
+    float: left;
+  }
+
+  @media (min-width: 768px) {
+    width: 750px;
+    float: left;
+  }
 }
