--- a/src/components/home/section1/section1.module.scss
+++ b/src/components/home/section1/section1.module.scss
@@ -312,6 +312,7 @@
     font-weight: 600;
     line-height: 26px;
     margin-bottom: 0;
+    padding: 0 20px !important;
 
     @media (max-width: 767.98px) {
       font-size: 12px;
