--- a/src/components/home/section2/section2.module.scss
+++ b/src/components/home/section2/section2.module.scss
@@ -12,7 +12,7 @@
 .wrapTopContent {
   text-align: center;
   width: 66.6666667%;
-  margin: 0 auto;
+  margin: 0 auto 100px auto;
   padding: 0 15px;
 
   @media (min-width: 768px) and (max-width: 1023.98px) {
@@ -46,7 +46,7 @@
   line-height: 1;
 
   @media (max-width: 767.98px) {
-    font-size: 40px;
+    font-size: 36px;
   }
 }
 
@@ -146,4 +146,23 @@
     width: 750px;
     float: left;
   }
+}
+
+.wrapRowMenu {
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.paddingMenu {
+  width: 100%;
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+  float: left;
+}
+
+.boxShadowMenu {
+  box-shadow: 0px 1px 73px 0px rgba(40, 40, 40, 0.1);
+  overflow: hidden;
 }
